{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 16,
  "lineage": "fc7f25cc-0b9c-a984-6e58-3d3a038ae863",
  "resources": [
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_subnet",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:428713901860:subnet/subnet-0a92c146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0a92c146",
            "map_public_ip_on_launch": true,
            "owner_id": "428713901860",
            "state": "available",
            "vpc_id": "vpc-da73f9b1"
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:428713901860:vpc/vpc-da73f9b1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-d567f3be",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b76e01dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-da73f9b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a80052c3",
            "owner_id": "428713901860",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_eip",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03b458cf606ca7520",
            "domain": "vpc",
            "id": "eipalloc-03a2eab9f8e0b7ea6",
            "instance": "i-03e6e557f6c6f4cec",
            "network_interface": "eni-013fdeaf9aae1c217",
            "private_dns": "ip-172-31-33-189.us-east-2.compute.internal",
            "private_ip": "172.31.33.189",
            "public_dns": "ec2-3-129-233-215.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.233.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-elastic-ip-610e0f4e"
            },
            "vpc": true
          },
          "dependencies": [
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_instance",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025227bc8f4c2cbdd",
            "arn": "arn:aws:ec2:us-east-2:428713901860:instance/i-03e6e557f6c6f4cec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlantis-610e0f4e",
            "id": "i-03e6e557f6c6f4cec",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "atlantis-keypair-610e0f4e",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013fdeaf9aae1c217",
            "private_dns": "ip-172-31-33-189.us-east-2.compute.internal",
            "private_ip": "172.31.33.189",
            "public_dns": "ec2-3-129-233-215.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.233.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:428713901860:key/76adbc39-9ea4-42cb-a273-973c84ac802d",
                "volume_id": "vol-0e36868b943aa0c86",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "atlantis-secgroup-610e0f4e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a92c146",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-003c89ce8d72bce1a"
            ]
          },
          "dependencies": [
            "module.atlantis.aws_iam_instance_profile.self",
            "module.atlantis.aws_iam_role.atlantis",
            "module.atlantis.aws_key_pair.self",
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_ami.focal",
            "module.atlantis.data.aws_iam_policy_document.ec2_trust_policy",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:428713901860:security-group/sg-003c89ce8d72bce1a",
            "description": "Security group to allow network inbound and outbound communication for Atlantis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003c89ce8d72bce1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "atlantis-secgroup-610e0f4e",
            "name_prefix": null,
            "owner_id": "428713901860",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "atlantis-secgroup-610e0f4e"
            },
            "timeouts": null,
            "vpc_id": "vpc-da73f9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-343031930",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-003c89ce8d72bce1a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1797864936",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003c89ce8d72bce1a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1760312366",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003c89ce8d72bce1a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3718471773",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003c89ce8d72bce1a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.aws_security_group.self",
            "module.atlantis.data.aws_subnet.self",
            "module.atlantis.data.aws_subnet_ids.default",
            "module.atlantis.data.aws_vpc.default",
            "module.atlantis.random_id.self"
          ]
        }
      ]
    }
  ]
}